@@ -1,3 +1,8 @@
+Change log next version
+-----------------------
+* Added support for uploading files, input streams, byte arrays and text using multi-part form upload. You can use the "multiPart" method to specify what to upload. E.g.
+  given().multiPart(new File("/home/user/myFile.txt").when().post("/upload"); (issue 93)
+
 Change log 1.2.3 (2011-08-18)
 -----------------------------
 * Fixed a bug when using PUT with multi-value form parameters.
